--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
-    "slugs": "^0.1.3"
+    "mongoose-validator": "^2.1.0",
+    "multer": "^1.4.2",
+    "slugs": "^0.1.3",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
