--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "body-parser": "^1.19.0",
     "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
+    "data": "^0.6.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-form-data": "^2.0.14",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
     "mongoose-validator": "^2.1.0",
